--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is a food ordering app",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build",
     "test": "jest"
   },
   "repository": {
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/vikash-frontier/CHWIGGY/issues"
   },
-  "homepage": "https://github.com/vikash-frontier/CHWIGGY#readme"
+  "homepage": "https://github.com/vikash-frontier/CHWIGGY#readme",
+  "devDependencies": {
+    "parcel": "^2.10.2",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
